--- a/shared_ptr.htm
+++ b/shared_ptr.htm
@@ -322,6 +322,7 @@ template&lt;class Y&gt; shared_ptr &amp; operator=(shared_ptr&lt;Y&gt; const &am
 template&lt;class Y&gt; shared_ptr &amp; operator=(std::auto_ptr&lt;Y&gt; &amp; r);</pre>
 		<BLOCKQUOTE>
 			<P><B>Effects:</B> Equivalent to <code>shared_ptr(r).swap(*this)</code>.</P>
+			<P><B>Returns:</B> <code>*this</code>.</P>
 			<P><B>Notes:</B> The use count updates caused by the temporary object construction 
 				and destruction are not considered observable side effects, and the 
 				implementation is free to meet the effects (and the implied guarantees) via 
