--- a/scoped_array.htm
+++ b/scoped_array.htm
@@ -29,7 +29,7 @@
 			heavier duty but far more flexible. A <b>boost::array</b> is an alternative 
 			that does not use dynamic allocation.</p>
 		<p>The class template is parameterized on <b>T</b>, the type of the object pointed 
-			to. <b>T</b> must meet the smart pointer <a href="smart_ptr.htm#Common requirements">
+			to. <b>T</b> must meet the smart pointer <a href="smart_ptr.htm#common_requirements">
 				common requirements</a>.</p>
 		<h2>Synopsis</h2>
 		<pre>namespace boost {
@@ -40,7 +40,7 @@
       typedef T <a href="#element_type">element_type</a>;
 
       explicit <a href="#ctor">scoped_array</a>(T * p = 0); // never throws
-      <a href="#~scoped_array">~scoped_array</a>(); // never throws
+      <a href="#destructor">~scoped_array</a>(); // never throws
 
       void <a href="#reset">reset</a>(T * p = 0); // never throws
 
@@ -62,23 +62,23 @@
 		<pre>explicit scoped_array(T * p = 0); // never throws</pre>
 		<p>Constructs a <b>scoped_array</b>, storing a copy of <b>p</b>, which must have 
 			been allocated via a C++ <b>new</b>[] expression or be 0. <b>T</b> is not 
-			required be a complete type. See the smart pointer <a href="smart_ptr.htm#Common requirements">
+			required be a complete type. See the smart pointer <a href="smart_ptr.htm#common_requirements">
 				common requirements</a>.</p>
-		<h3><a name="~scoped_array">destructor</a></h3>
+		<h3><a name="destructor">destructor</a></h3>
 		<pre>~scoped_array(); // never throws</pre>
 		<p>Deletes the array pointed to by the stored pointer. Note that <b>delete[]</b> on 
 			a pointer with a value of 0 is harmless. The guarantee that this does not throw 
 			exceptions depends on the requirement that the deleted array's objects' 
-			destructors do not throw exceptions. See the smart pointer <a href="smart_ptr.htm#Common requirements">
+			destructors do not throw exceptions. See the smart pointer <a href="smart_ptr.htm#common_requirements">
 				common requirements</a>.</p>
 		<h3><a name="reset">reset</a></h3>
 		<pre>void reset(T * p = 0); // never throws</pre>
-		<p>If p is not equal to the stored pointer, deletes the array pointed to by the 
-			stored pointer and then stores a copy of p, which must have been allocated via 
-			a C++ <b>new[]</b> expression or be 0. The guarantee that this does not throw 
-			exceptions depends on the requirement that the deleted array's objects' 
-			destructors do not throw exceptions. See the smart pointer <a href="smart_ptr.htm#Common requirements">
-				common requirements</a>.</p>
+		<p>
+			Deletes the array pointed to by the stored pointer and then stores a copy of p, 
+			which must have been allocated via a C++ <b>new[]</b> expression or be 0. The 
+			guarantee that this does not throw exceptions depends on the requirement that 
+			the deleted array's objects' destructors do not throw exceptions. See the smart 
+			pointer <a href="smart_ptr.htm#common_requirements">common requirements</a>.</p>
 		<h3><a name="operator[]">subscripting</a></h3>
 		<pre>T &amp; operator[](std::ptrdiff_t i) const; // never throws</pre>
 		<p>Returns a reference to element <b>i</b> of the array pointed to by the stored 
@@ -88,11 +88,11 @@
 		<h3><a name="get">get</a></h3>
 		<pre>T * get() const; // never throws</pre>
 		<p>Returns the stored pointer. <b>T</b> need not be a complete type. See the smart 
-			pointer <a href="smart_ptr.htm#Common requirements">common requirements</a>.</p>
+			pointer <a href="smart_ptr.htm#common_requirements">common requirements</a>.</p>
 		<h3><a name="swap">swap</a></h3>
 		<pre>void swap(scoped_array &amp; b); // never throws</pre>
 		<p>Exchanges the contents of the two smart pointers. <b>T</b> need not be a 
-			complete type. See the smart pointer <a href="smart_ptr.htm#Common requirements">common 
+			complete type. See the smart pointer <a href="smart_ptr.htm#common_requirements">common 
 				requirements</a>.</p>
 		<h2><a name="functions">Free Functions</a></h2>
 		<h3><a name="free-swap">swap</a></h3>
