fix invalid bookmarks
[SVN r16824]

--- a/scoped_array.htm
+++ b/scoped_array.htm
@@ -34,7 +34,7 @@
 		<h2>Synopsis</h2>
 		<pre>namespace boost {
 
-  template&lt;class T&gt; class scoped_array : <a href="../utility/utility.htm#noncopyable">noncopyable</a> {
+  template&lt;class T&gt; class scoped_array : <a href="../utility/utility.htm#Class_noncopyable">noncopyable</a> {
 
     public:
       typedef T <a href="#element_type">element_type</a>;
@@ -100,8 +100,7 @@
 		<p>Equivalent to <b>a.swap(b)</b>. Matches the interface of <b>std::swap</b>. 
 			Provided as an aid to generic programming.</p>
 		<hr>
-		<p>Revised <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %B %Y" startspan--> 
-			1 February 2002<!--webbot bot="Timestamp" endspan i-checksum="13964"--></p>
+		<p>Revised <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %B %Y" startspan-->09 January 2003<!--webbot bot="Timestamp" endspan i-checksum="32310"--></p>
 		<p>Copyright 1999 Greg Colvin and Beman Dawes. Copyright 2002 Darin Adler. 
 			Permission to copy, use, modify, sell and distribute this document is granted 
 			provided this copyright notice appears in all copies. This document is provided 
