Update make shared for arrays documentation

--- a/smart_ptr.htm
+++ b/smart_ptr.htm
@@ -66,7 +66,7 @@
 		<div align="left">
 			<table border="1" cellpadding="4" cellspacing="0">
 				<tr>
-					<td><a href="make_shared.html"><b>make_shared and allocate_shared</b></a></td>
+					<td><a href="make_shared.html"><b>make_shared and allocate_shared for objects</b></a></td>
 					<td><a href="../../boost/make_shared.hpp">&lt;boost/make_shared.hpp&gt;</a></td>
 					<td>Efficient creation of <code>shared_ptr</code> objects.</td>
 				</tr>
