--- a/smart_ptr.htm
+++ b/smart_ptr.htm
@@ -62,7 +62,7 @@
 			described in Bjarne Stroustrup's "The C++ Programming Language", 3rd edition,
 			Section 14.4, Resource Management.</p>
 		<p>Additionally, the smart pointer library provides efficient factory functions
-			for creating <code>shared_ptr</code> objects:</p>
+			for creating smart pointer objects:</p>
 		<div align="left">
 			<table border="1" cellpadding="4" cellspacing="0">
 				<tr>
@@ -137,8 +137,9 @@
 			throwing exceptions by the <a href="#common_requirements">common requirements</a>.</p>
 		<h2><a name="History">History</a> and Acknowledgements</h2>
 		<p>January 2014. Glen Fernandes confined the overloads of <b>make_shared</b> 
-		  and <b>allocate_shared</b> for arrays to the specification in N3870 and 
-		  implemented <b>make_unique</b> for arrays and objects.</p>
+		  and <b>allocate_shared</b> for arrays to the specification in 
+		  <a href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2014/n3870.html">N3870</a> 
+		  and implemented <b>make_unique</b> for arrays and objects.</p>
 		<p>November 2012. Glen Fernandes provided implementations of <b>make_shared</b> 
 		  and <b>allocate_shared</b> for arrays. They achieve a single allocation for an
 		  array that can be initialized with constructor arguments or initializer lists 
